<resources>
    <string name="app_name">AA3_Interficies</string>
    <string name="login_title">Login</string>
    <string name="profile_title">Profile</string>
    <string name="contact_title">Contact</string>
    <string name="return_title">Return to App</string>
    <string name="back_to_login_button">back to login\n</string>
    <string name="end_register_button">registered\n</string>
    <string name="login_button">Login\n</string>
    <string name="register_button">Register\n</string>
    <string name="login_error">error to login\n</string>
    <string name="user_login_message">user logged\n</string>
    <string name="field_email_label">insert email\n</string>
    <string name="field_password_label">insert password\n</string>
    <string name="field_verify_password_label">verify password\n</string>
    <string name="news_title">news\n</string>
    <string name="item_title">items\n</string>
    <string name="chat_title">chat\n</string>
    <string name="default_web_client_id" translatable="false">webClientId.apps.googleusercontent.com</string>
    <string name="default_push_channel_name">channel default\n</string>
    <string name="chat_messages_hint">Type message</string>
    <string name="chat_upload_image_error">image failed to upload</string>
    <string name="scree_home">Home\n</string>
</resources>