<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/news_bar_button"
            android:icon="@drawable/profile_icon"
            android:title="@string/scree_home"
            />
        <item
            android:id="@+id/community_button_bar_button"
            android:icon="@drawable/chat_icon"
            android:title="@string/chat_title"
            />
        <item
            android:id="@+id/stats_button_bar_button"
            android:icon="@drawable/dislike"
            android:title="@string/item_title"
            />
        <item
            android:id="@+id/cdl_button_bar_button"
            android:icon="@drawable/news_icon"
            android:title="@string/news_title"
            />

    </group>
</menu>