<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/background_loginscreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/login_screen"
        android:layout_gravity="center"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/app_icon"
            android:contentDescription="@string/app_name"
            android:layout_marginBottom="32dp"/>
        <!-- Username Input -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/usernameInputContainer"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_email_label"
                app:startIconDrawable="@drawable/fui_ic_mail_white_24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- Password Input -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/passwordInputContainer"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_password_label"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/asteriscos">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- Verify Password Input -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/verifyPasswordInputContainer"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:visibility="gone"
            tools:visibility="visible">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/verifyPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_verify_password_label"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/asteriscos">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- Login Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/extra_tiny"
            android:text="@string/login_button"/>

        <!-- Register Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/extra_tiny"
            android:text="@string/register_button"/>

        <!-- Google Sign-In Button -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/extra_tiny">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/login_google_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

